[package]
name = "swen"
version = "0.1.0"
eodition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
csv = "1.1.6"
serde = {version="1.0.133", features = ["derive"]}
sled = "0.34.7"

